--- a/estiloux/css/estilo.css
+++ b/estiloux/css/estilo.css
@@ -1,115 +1,123 @@
-*{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: 0;
 
 }
 
-main{background-color: aqua;}
-
-
-
-
-
-
-
-
-
-
-body{
-background-color: rgb(0, 108, 136);
-display: flex;
-justify-content: space-evenly;
-align-items: center;
-flex-direction: row;
+body {
+    background-color: rgb(255, 255, 255);
 }
 
-article img{
-
-height: 70px;
-width:60px;
-
-}
-article h1{
-color: rgb(0, 0, 0);
-text-transform: uppercase;
-font-family: Arial, Helvetica, sans-serif;
-font-size: 18px;
-
-}
-article p {
-align-items: center;
-display: flex;
-font-family:Georgia, 'Times New Roman', Times, serif;
-font-size: 14px;
-align-items: center;
+header , footer {
+    background-color: rgb(55, 55, 55);
+    border: 3px solid black;
 }
 
 
-.article1{
 
-
+.header-flex {
     display: flex;
-    width: 180px;
-    height: 180px;
-    padding: 10px;
-    border: 2px solid rgb(14, 178, 233);
-    border-radius: 5px;
-    background-color:  rgb(255, 255, 255);
-    box-shadow: 2px 2px 5px black;
+    justify-content: space-evenly;
     align-items: center;
-    flex-direction: column;
+}
 
 
+h1 {
+
+    font-family: a, sans-serif;
+    font-size: 35px;
+    font-weight: 300px;
+    color: rgb(205, 205, 205);
+}
+
+.layout-grid {
+    width: 100%;
+    height: 100%;
+    max-width: 992px;
+    margin: 0 auto;
+    border: 5px solid rgb(55, 55, 55);
+   
+}
+
+
+.ux {
+    color: white;
+    font-size: 50px;
+    margin-left: 3px;
+    font-weight: bold;
+    font-family: sans-serif
 }
 
 
 
-article{
 
-display: flex;
-width: 180px;
-height: 180px;
-padding: 10px;
-border: 2px solid rgb(14, 178, 233);
-border-radius: 5px;
-background-color:  rgb(255, 255, 255);
-box-shadow: 2px 2px 5px black;
-align-items: center;
-flex-direction: column;
-
-}
-
-
-body{
+nav {
     display: flex;
-justify-content: center;
-    background-color: lightblue
+    align-items: center;
+    justify-content: space-between;
+    width: 400px;
+    height: 100%;
+}
 
-    }  
-
-
-
-    h1{
-
-        font-family: Verdana, Geneva, Tahoma, sans-serif;  
-        font-size: 30px;
-        font-weight: 300px;
-        color: white;
-    }
-
-    .layout-grid{
-        width: 100%;
-        height: 100%;
-        max-width: 992px;
-        margin: 0 auto;
-        border: 3px solid white;
-    }
-
-
-    .header-flex{
-        display: flex;
-        justify-content: space-between;
+nav a {
+    
+    color: rgb(255, 255, 255);
+    
+    font-weight: 100;
+    font-size: 30px;
+    height: 80px;
+    width: 100%;
+    
+    display: flex;
+    text-decoration: none;
+    font-family: sans-serif;
+    justify-content: space-between;
+    align-items: center;
+    transition: background-color ease, margin-left ease margin-botom ease;
+}
 
 
-    }
+nav a:hover {
+    background-color: rgba(205, 205, 205, 0.5);
+    margin-left: 10px;
+    margin-bottom: 10px;
+}
+
+main {
+    width: 100%;
+    height: 80%;
+    border: 3px solid red;
+
+
+}
+
+.main-flex {
+    border: 2px solid green;
+    background-color: antiquewhite;
+   
+    width: 100%;
+    height: 100%;
+
+    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+.harmonia {
+    border: 2px solid blue;
+    margin: 10px;
+    width: 700px;
+    height: 500px;
+    background-color: green;
+
+}
+
+aside {
+    border: 2px solid purple;
+    width: 250px;
+    height: 500px;
+    background-color: green;
+}
